name:           RxHaskell
version:        0.1
stability:      alpha
synopsis:       An implementation of Reactive Extensions for Haskell
description:    Effectful functional reactive programming, based on Microsoft's Reactive Extensions for .NET: http://msdn.microsoft.com/en-us/library/hh242985(v=VS.103).aspx
homepage:       https://github.com/jspahrsummers/RxHaskell
category:       FRP
author:         Justin Spahr-Summers
maintainer:     Justin Spahr-Summers
license:        MIT
license-file:   LICENSE.md
cabal-version:  >= 1.14
build-type:     Simple

library
  default-language:   Haskell2010
  build-depends:      base >= 4.5 && < 5,
                      containers >= 0.4,
                      stm >= 2.4,
                      transformers >= 0.3
  exposed-modules:    Disposable,
                      Scheduler, Scheduler.Internal, Scheduler.Main, Scheduler.Unsafe,
                      Signal, Signal.Channel, Signal.Command, Signal.Connection, Signal.Event, Signal.Operators, Signal.Scheduled
                      Signal.Subscriber, Signal.Subscriber.Internal
  default-extensions:

source-repository head
  type:     git
  location: git://github.com/jspahrsummers/RxHaskell.git
